--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,25 +10,25 @@ jobs:
   androidBuild:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.4.0
-    - name: set up JDK
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: 11
+      - uses: actions/checkout@v2.4.0
+      - name: set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 11
 
-    - name: assemble ViroCore
-      run: |
-        ./gradlew assembleDebug
-      working-directory: ./android
-    - name: Upload result ViroCore
-      uses: actions/upload-artifact@v2.2.4
-      with: 
-        name: viroCore
-        path: |
-          ./android/virocore/build/outputs/aar/*.aar
-          ./android/viroreact/build/outputs/aar/*.aar
-          ./android/viroar/build/outputs/aar/*.aar
+      - name: assemble ViroCore
+        run: |
+          ./gradlew assembleDebug
+        working-directory: ./android
+      - name: Upload result ViroCore
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: viroCore
+          path: |
+            ./android/virocore/build/outputs/aar/*.aar
+            ./android/viroreact/build/outputs/aar/*.aar
+            ./android/viroar/build/outputs/aar/*.aar
 
   AndroidCheck:
     name: Check
@@ -58,13 +58,19 @@ jobs:
             ./**/**/build/reports/lint-results.html
 
   iosBuild:
-    runs-on: macos-latest
+    runs-on: ${{ matrix.macOS }}
+    strategy:
+      fail-fast: false
+      matrix:
+        xcode: [ '12.5.1', '13.1.0', '13.2.0' ]
+        macOS: [ 'macOS-11' ]
     steps:
       - uses: actions/checkout@v2.4.0
       - name: Install gpg
         run: brew install gnupg
-      - name: Set XCode Version 11.2
-        run: sudo xcode-select -s /Applications/Xcode_11.2.app
+      - uses: maxim-lobanov/setup-xcode@v1.4.0
+        with:
+          xcode-version: ${{ matrix.xcode }}
       - name: Install pod dependencies
         run: |
           cd ios
@@ -72,15 +78,16 @@ jobs:
         shell: bash
       - name: Xcodebuild iOS Renderer (non-static)
         run: |
-          cd ios && xcodebuild \
+          cd ios
+          xcodebuild \
             -workspace ViroRenderer.xcworkspace \
             -scheme ViroKit \
-            -sdk iphoneos13.2 \
+            -sdk iphoneos \
             -configuration Release \
             IPHONEOS_DEPLOYMENT_TARGET=9.0
-            
+
       - name: Upload iOS Renderer artifact
         uses: actions/upload-artifact@v2.2.4
-        with: 
+        with:
           name: ios_dist.tgz
           path: ./ios/dist/
