--- a/android/sharedCode/build.gradle
+++ b/android/sharedCode/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'maven-publish'
 
 // This module is not used to build ViroReact or ViroCore, nor is it used as any dependency.
@@ -39,6 +40,8 @@ dependencies {
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 project.afterEvaluate {
