--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,26 +14,11 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Build Changelog
-        id: github_release
-        uses: mikepenz/release-changelog-builder-action@main
-        with:
-          configuration: ".github/changelog-configuration.json"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Install JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: 11
-
-      - name: Install Android SDK
-        uses: malinskiy/action-android/install-sdk@release/0.1.2
-
-      - name: Build project
-        run: ./gradlew assembleRelease
-        working-directory: ./android
 
       - name: Get the version
         id: tagger
@@ -43,16 +28,36 @@ jobs:
           abbrev: false
           commit-ish: HEAD
 
+      - name: Check pre-release
+        run: |
+          echo "tag=${{steps.tagger.outputs.tag}}"
+          if [[ ${{ steps.tagger.outputs.tag }} == *alpha* || ${{ steps.tagger.outputs.tag }} == *beta*  || ${{ steps.tagger.outputs.tag }} == *rc* ]]
+          then
+             prerelease=true
+          else
+             prerelease=false
+          fi
+          echo "PRE_RELEASE=$prerelease" >> $GITHUB_ENV
+          echo "prerelease=$prerelease"
+
+      - name: Install Android SDK
+        uses: malinskiy/action-android/install-sdk@release/0.1.3
+
+      - name: Build project
+        run: ./gradlew assembleRelease
+        working-directory: ./android
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{steps.tagger.outputs.tag}}
+          generate_release_notes: true
+          prerelease: ${{ env.PRE_RELEASE }}
           name: ${{steps.tagger.outputs.tag}}
-          body: ${{steps.github_release.outputs.changelog}}
           files: |
-            android/virocore/build/outputs/aar/virocore-release*.aar
-            android/viroar/build/outputs/aar/viro*.aar
-            android/viroreact/build/outputs/aar/viro*.aar
-            android/sharedCode/build/outputs/aar/*.aar
+            ./viroreact/build/outputs/aar/viroreact-release.aar
+            ./viroar/build/outputs/aar/viroar-release.aar
+            ./virocore/build/outputs/aar/virocore-release.aar
+            ./sharedCode/build/outputs/aar/sharedCode-release.aar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
