--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: Renderer
+name: Build ViroCore Renderer
 
 on:
   push:
@@ -8,13 +8,14 @@ on:
 
 jobs:
   androidBuild:
+    name: Android Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.3.0
       - name: set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: "adopt"
           java-version: 11
 
       - name: assemble ViroCore
@@ -30,8 +31,8 @@ jobs:
             ./android/viroreact/build/outputs/aar/*.aar
             ./android/viroar/build/outputs/aar/*.aar
 
-  AndroidCheck:
-    name: Check
+  androidCheck:
+    name: Android Lint Check
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -57,13 +58,14 @@ jobs:
             ./**/build/reports/lint-results.html
             ./**/**/build/reports/lint-results.html
 
-  iosBuild:
+  iOSBuild:
+    name: iOS Build
     runs-on: ${{ matrix.macOS }}
     strategy:
       fail-fast: false
       matrix:
-        xcode: [ '12.5.1', '13.2.1' ]
-        macOS: [ 'macOS-11' ]
+        xcode: ["12.5.1", "13.2.1"]
+        macOS: ["macOS-11"]
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Install gpg
