--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -65,7 +65,7 @@ jobs:
       fail-fast: false
       matrix:
         xcode: ["14.3.1", "15.2"]
-        macOS: ["macOS-14"]
+        macOS: ["latest"]
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Install gpg
