--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -65,7 +65,7 @@ jobs:
       fail-fast: false
       matrix:
         xcode: ["14.2.0", "13.4.1"]
-        macOS: ["macos-latest"]
+        macOS: ["macos-12"]
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Install gpg
@@ -86,7 +86,7 @@ jobs:
             -scheme ViroKit \
             -sdk iphoneos \
             -configuration Release \
-            IPHONEOS_DEPLOYMENT_TARGET=13.0
+            IPHONEOS_DEPLOYMENT_TARGET=13.0 | xcpretty
 
       - name: Upload iOS Renderer artifact
         uses: actions/upload-artifact@v3.1.2
